unpackaged/main/default/objects/Online_Bookings__c/Online_Bookings__c.object-meta.xml
<CustomObject>
    <label>Online Booking</label>
    <nameField>
        <displayFormat>OB-{000000}</displayFormat>
        <label>Online Booking</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Online Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>