unpackaged/main/default/objects/Online_Bookings__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Online Bookings</relationshipLabel>
    <relationshipName>Online_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>