unpackaged/main/default/objects/Online_Bookings__c/fields/AFL_UTM_Google_Analytics_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>AFL_UTM_Google_Analytics_Client_ID__c</fullName>
    <label>AFL UTM Google Analytics Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>