unpackaged/main/default/objects/Online_Bookings__c/fields/AFL_UTM_Session_Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>AFL_UTM_Session_Landing_Page__c</fullName>
    <label>AFL UTM Session Landing Page</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>