unpackaged/main/default/objects/Online_Bookings__c/fields/AFL_UTM_Session_Referer_URL__c.field-meta.xml
<CustomField>
    <fullName>AFL_UTM_Session_Referer_URL__c</fullName>
    <label>AFL UTM Session Referer URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>