unpackaged/main/default/objects/Online_Bookings__c/fields/Arrival_contact_name__c.field-meta.xml
<CustomField>
    <fullName>Arrival_contact_name__c</fullName>
    <label>Arrival contact name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>