unpackaged/main/default/objects/Online_Bookings__c/fields/Arrival_contact_phone__c.field-meta.xml
<CustomField>
    <fullName>Arrival_contact_phone__c</fullName>
    <label>Arrival contact phone</label>
    <type>Phone</type>
</CustomField>