unpackaged/main/default/objects/Online_Bookings__c/fields/Arrival_contact_required__c.field-meta.xml
<CustomField>
    <fullName>Arrival_contact_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arrival contact required</label>
    <type>Checkbox</type>
</CustomField>