unpackaged/main/default/objects/Online_Bookings__c/fields/Booked_in_Siclops__c.field-meta.xml
<CustomField>
    <fullName>Booked_in_Siclops__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the Online Booking been entered into Siclops?</description>
    <inlineHelpText>Has the Online Booking been entered into Siclops?</inlineHelpText>
    <label>Booked in</label>
    <type>Checkbox</type>
</CustomField>