unpackaged/main/default/objects/Online_Bookings__c/fields/Credit_account_holder__c.field-meta.xml
<CustomField>
    <fullName>Credit_account_holder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit account holder</label>
    <type>Checkbox</type>
</CustomField>