unpackaged/main/default/objects/Online_Bookings__c/fields/Credit_account_number__c.field-meta.xml
<CustomField>
    <fullName>Credit_account_number__c</fullName>
    <label>Credit account number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>