unpackaged/main/default/objects/Online_Bookings__c/fields/Details_of_issue__c.field-meta.xml
<CustomField>
    <fullName>Details_of_issue__c</fullName>
    <label>Details of issue</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>