unpackaged/main/default/objects/Online_Bookings__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <label>Discount Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>