unpackaged/main/default/objects/Online_Bookings__c/fields/Gas_supply_type__c.field-meta.xml
<CustomField>
    <fullName>Gas_supply_type__c</fullName>
    <label>Gas supply type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>