unpackaged/main/default/objects/Online_Bookings__c/fields/Half_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Half_Hourly_Rate__c</fullName>
    <label>Half Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>