unpackaged/main/default/objects/Online_Bookings__c/fields/Hourly_rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_rate__c</fullName>
    <label>Hourly rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>