unpackaged/main/default/objects/Online_Bookings__c/fields/Image_of_issue__c.field-meta.xml
<CustomField>
    <fullName>Image_of_issue__c</fullName>
    <label>Image of issue</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>