unpackaged/main/default/objects/Online_Bookings__c/fields/Internal_EmailID__c.field-meta.xml
<CustomField>
    <fullName>Internal_EmailID__c</fullName>
    <defaultValue>&#39;welcometeam@aspect.co.uk&#39;</defaultValue>
    <label>Internal EmailID</label>
    <type>Email</type>
</CustomField>