unpackaged/main/default/objects/Online_Bookings__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead</valueSetName>
    </valueSet>
</CustomField>