unpackaged/main/default/objects/Online_Bookings__c/fields/Lost_Lead_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Lead_Reason__c</fullName>
    <label>Lost Lead Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lost_Lead_Reason</valueSetName>
    </valueSet>
</CustomField>