unpackaged/main/default/objects/Online_Bookings__c/fields/Marketing_list__c.field-meta.xml
<CustomField>
    <fullName>Marketing_list__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing list</label>
    <type>Checkbox</type>
</CustomField>