unpackaged/main/default/objects/Online_Bookings__c/fields/Office_Notes__c.field-meta.xml
<CustomField>
    <fullName>Office_Notes__c</fullName>
    <label>Office Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>