unpackaged/main/default/objects/Online_Bookings__c/fields/OLB_Comments__c.field-meta.xml
<CustomField>
    <fullName>OLB_Comments__c</fullName>
    <label>OLB Comments</label>
    <type>TextArea</type>
</CustomField>