unpackaged/main/default/objects/Online_Bookings__c/fields/OLB_contact__c.field-meta.xml
<CustomField>
    <fullName>OLB_contact__c</fullName>
    <label>OLB contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Booked</fullName>
            </value>
            <value>
                <fullName>Office Booked</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Awaiting Card</fullName>
            </value>
            <value>
                <fullName>Rejected by Client</fullName>
            </value>
            <value>
                <fullName>Refused Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>