unpackaged/main/default/objects/Online_Bookings__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <formula>TEXT(Account__r.Onboarding__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding</label>
    <type>Text</type>
</CustomField>