unpackaged/main/default/objects/Online_Bookings__c/fields/onlinesession__c.field-meta.xml
<CustomField>
    <fullName>onlinesession__c</fullName>
    <label>onlinesession</label>
    <length>50</length>
    <type>Text</type>
</CustomField>