unpackaged/main/default/objects/Online_Bookings__c/fields/Preferred_arrival_time_slot__c.field-meta.xml
<CustomField>
    <fullName>Preferred_arrival_time_slot__c</fullName>
    <label>Preferred arrival time slot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>