unpackaged/main/default/objects/Online_Bookings__c/fields/Preferred_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_Time__c</fullName>
    <formula>DATETIMEVALUE(TEXT(Preferred_date__c) &amp; &quot; &quot; &amp; LEFT(Preferred_arrival_time_slot__c,5)&amp;&quot;:00&quot; )-0.041666667</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Date Time</label>
    <type>DateTime</type>
</CustomField>