unpackaged/main/default/objects/Online_Bookings__c/fields/Property_access_details__c.field-meta.xml
<CustomField>
    <fullName>Property_access_details__c</fullName>
    <label>Property access details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>