unpackaged/main/default/objects/Online_Bookings__c/fields/TI_Online_Booking__c.field-meta.xml
<CustomField>
    <fullName>TI_Online_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TI Online Booking</label>
    <type>Checkbox</type>
</CustomField>