unpackaged/main/default/objects/Online_Bookings__c/fields/Tradesperson__c.field-meta.xml
<CustomField>
    <fullName>Tradesperson__c</fullName>
    <label>Tradesperson</label>
    <length>255</length>
    <type>Text</type>
</CustomField>