unpackaged/main/default/objects/Online_Bookings__c/fields/Tradesperson_Text__c.field-meta.xml
<CustomField>
    <fullName>Tradesperson_Text__c</fullName>
    <formula>TEXT( Work_Type__r.Trade__c )</formula>
    <label>Tradesperson Text</label>
    <type>Text</type>
</CustomField>