unpackaged/main/default/objects/Online_Bookings__c/fields/Voucher_Code__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Code__c</fullName>
    <label>Voucher Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>