unpackaged/main/default/objects/Online_Bookings__c/fields/WO_Status__c.field-meta.xml
<CustomField>
    <fullName>WO_Status__c</fullName>
    <formula>Text( Work_Order__r.Status )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WO Status</label>
    <type>Text</type>
</CustomField>