unpackaged/main/default/objects/Online_Bookings__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Online Bookings</relationshipLabel>
    <relationshipName>Online_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>