unpackaged/main/default/objects/Online_Bookings__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Online Bookings</relationshipLabel>
    <relationshipName>Online_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>