unpackaged/main/default/objects/Online_Bookings__c/listViews/All_OLB_Only_EXC_TI.listView-meta.xml
<ListView>
    <fullName>All_OLB_Only_EXC_TI</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Work_Type__c</columns>
    <columns>Postcode__c</columns>
    <columns>Preferred_date__c</columns>
    <columns>Preferred_arrival_time_slot__c</columns>
    <columns>Mobile_number__c</columns>
    <columns>WO_Status__c</columns>
    <columns>Account__c</columns>
    <columns>OLB_contact__c</columns>
    <columns>TI_Online_Booking__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Work_Type__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>8/1/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>TI_Online_Booking__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All OLB Only (EXC. TI)</label>
</ListView>