unpackaged/main/default/objects/Online_Bookings__c/listViews/OLB_P2.listView-meta.xml
<ListView>
    <fullName>OLB_P2</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Work_Type__c</columns>
    <columns>Postcode__c</columns>
    <columns>Preferred_date__c</columns>
    <columns>Preferred_arrival_time_slot__c</columns>
    <columns>OLB_contact__c</columns>
    <columns>Lost_Lead_Reason__c</columns>
    <columns>Mobile_number__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Work_Type__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>OLB - P2</label>
</ListView>