unpackaged/main/default/objects/Online_Bookings__c/listViews/OLB_Prospect_Clients.listView-meta.xml
<ListView>
    <fullName>OLB_Prospect_Clients</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Onboarding__c</columns>
    <columns>Company_name__c</columns>
    <columns>Work_Order__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Onboarding__c</field>
        <operation>contains</operation>
        <value>New,Existing</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>notEqual</operation>
        <value>Phase 2 Test Cash Account</value>
    </filters>
    <label>OLB - Prospect Clients</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>